# GCT

./: .gitignore  LICENSE  README.md  lib.py  pyproject.toml  template.env  trade.py
lib/: __init__.py  _cryptonews.py  _models.py  _shared.py  _storage.py  cryptonews.py  database.py  logger.py  models.py  shared.py
